[gd_scene load_steps=8 format=3 uid="uid://b02s22ak1foph"]

[ext_resource type="Texture2D" uid="uid://bdh1rlr64pyob" path="res://assets/ui_elements/item_balloon1.png" id="2_aa1l6"]
[ext_resource type="Script" uid="uid://72mwkqpfapcq" path="res://ui/item_balloon.gd" id="2_j0bld"]
[ext_resource type="Texture2D" uid="uid://d0i06vq077fyp" path="res://assets/ui_elements/item_balloon2.png" id="3_4qfnw"]

[sub_resource type="Animation" id="Animation_rsok1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kt724"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -9), Vector2(0, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r6tfb"]
resource_name = "dissappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -9), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22yml"]
_data = {
&"RESET": SubResource("Animation_rsok1"),
&"appear": SubResource("Animation_kt724"),
&"dissappear": SubResource("Animation_r6tfb")
}

[node name="ItemBalloon" type="Node2D"]
z_index = 6
script = ExtResource("2_j0bld")

[node name="SpritePivot" type="Node2D" parent="."]
position = Vector2(0, -9)

[node name="BalloonSprite" type="Node2D" parent="SpritePivot"]

[node name="NineRectBalloon" type="NinePatchRect" parent="SpritePivot/BalloonSprite"]
offset_left = -5.0
offset_top = -6.0
offset_right = 5.0
offset_bottom = 5.0
texture = ExtResource("2_aa1l6")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Sprite2D2" type="Sprite2D" parent="SpritePivot/BalloonSprite"]
texture = ExtResource("3_4qfnw")

[node name="ItemContainer" type="Node2D" parent="SpritePivot"]

[node name="ItemSprite" type="Sprite2D" parent="SpritePivot/ItemContainer"]
position = Vector2(0, -2)

[node name="ItemSprite2" type="Sprite2D" parent="SpritePivot/ItemContainer"]
position = Vector2(8, -2)

[node name="ItemSprite4" type="Sprite2D" parent="SpritePivot/ItemContainer"]
position = Vector2(-8, -2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_22yml")
}
